--- a/app/webroot/css/style-responsive.css
+++ b/app/webroot/css/style-responsive.css
@@ -17,7 +17,7 @@
 @media (max-width: 768px) {
 
     .header {
-        position: absolute;
+       /* position: absolute;*/
     }
 
     /*sidebar*/
